parser.output
State 40 conflicts: 10 shift/reduce
State 41 conflicts: 10 shift/reduce
State 42 conflicts: 10 shift/reduce
State 43 conflicts: 10 shift/reduce
State 44 conflicts: 10 shift/reduce
State 45 conflicts: 10 shift/reduce
State 46 conflicts: 10 shift/reduce
State 47 conflicts: 10 shift/reduce
State 48 conflicts: 10 shift/reduce
State 49 conflicts: 10 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program statement
    2        | ε

    3 statement: declaration
    4          | assignment
    5          | if_stmt
    6          | while_stmt

    7 declaration: INT IDENTIFIER ASSIGN expression SEMICOLON

    8 assignment: IDENTIFIER ASSIGN expression SEMICOLON

    9 if_stmt: IF LPAREN expression RPAREN block

   10 while_stmt: WHILE LPAREN expression RPAREN block

   11 block: LBRACE program RBRACE

   12 expression: expression PLUS expression
   13           | expression MINUS expression
   14           | expression TIMES expression
   15           | expression DIVIDE expression
   16           | expression EQ expression
   17           | expression NE expression
   18           | expression LT expression
   19           | expression GT expression
   20           | expression LE expression
   21           | expression GE expression
   22           | LPAREN expression RPAREN
   23           | NUMBER
   24           | IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INT (258) 7
    IF (259) 9
    WHILE (260) 10
    EQ (261) 16
    NE (262) 17
    LE (263) 20
    GE (264) 21
    LT (265) 18
    GT (266) 19
    ASSIGN (267) 7 8
    PLUS (268) 12
    MINUS (269) 13
    TIMES (270) 14
    DIVIDE (271) 15
    LPAREN (272) 9 10 22
    RPAREN (273) 9 10 22
    LBRACE (274) 11
    RBRACE (275) 11
    SEMICOLON (276) 7 8
    NUMBER (277) 23
    IDENTIFIER (278) 7 8 24


Nonterminals, with rules where they appear

    $accept (24)
        on left: 0
    program (25)
        on left: 1 2
        on right: 0 1 11
    statement (26)
        on left: 3 4 5 6
        on right: 1
    declaration (27)
        on left: 7
        on right: 3
    assignment (28)
        on left: 8
        on right: 4
    if_stmt (29)
        on left: 9
        on right: 5
    while_stmt (30)
        on left: 10
        on right: 6
    block (31)
        on left: 11
        on right: 9 10
    expression (32)
        on left: 12 13 14 15 16 17 18 19 20 21 22 23 24
        on right: 7 8 9 10 12 13 14 15 16 17 18 19 20 21 22


State 0

    0 $accept: • program $end

    $default  reduce using rule 2 (program)

    program  go to state 1


State 1

    0 $accept: program • $end
    1 program: program • statement

    $end        shift, and go to state 2
    INT         shift, and go to state 3
    IF          shift, and go to state 4
    WHILE       shift, and go to state 5
    IDENTIFIER  shift, and go to state 6

    statement    go to state 7
    declaration  go to state 8
    assignment   go to state 9
    if_stmt      go to state 10
    while_stmt   go to state 11


State 2

    0 $accept: program $end •

    $default  accept


State 3

    7 declaration: INT • IDENTIFIER ASSIGN expression SEMICOLON

    IDENTIFIER  shift, and go to state 12


State 4

    9 if_stmt: IF • LPAREN expression RPAREN block

    LPAREN  shift, and go to state 13


State 5

   10 while_stmt: WHILE • LPAREN expression RPAREN block

    LPAREN  shift, and go to state 14


State 6

    8 assignment: IDENTIFIER • ASSIGN expression SEMICOLON

    ASSIGN  shift, and go to state 15


State 7

    1 program: program statement •

    $default  reduce using rule 1 (program)


State 8

    3 statement: declaration •

    $default  reduce using rule 3 (statement)


State 9

    4 statement: assignment •

    $default  reduce using rule 4 (statement)


State 10

    5 statement: if_stmt •

    $default  reduce using rule 5 (statement)


State 11

    6 statement: while_stmt •

    $default  reduce using rule 6 (statement)


State 12

    7 declaration: INT IDENTIFIER • ASSIGN expression SEMICOLON

    ASSIGN  shift, and go to state 16


State 13

    9 if_stmt: IF LPAREN • expression RPAREN block

    LPAREN      shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 19

    expression  go to state 20


State 14

   10 while_stmt: WHILE LPAREN • expression RPAREN block

    LPAREN      shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 19

    expression  go to state 21


State 15

    8 assignment: IDENTIFIER ASSIGN • expression SEMICOLON

    LPAREN      shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 19

    expression  go to state 22


State 16

    7 declaration: INT IDENTIFIER ASSIGN • expression SEMICOLON

    LPAREN      shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 19

    expression  go to state 23


State 17

   22 expression: LPAREN • expression RPAREN

    LPAREN      shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 19

    expression  go to state 24


State 18

   23 expression: NUMBER •

    $default  reduce using rule 23 (expression)


State 19

   24 expression: IDENTIFIER •

    $default  reduce using rule 24 (expression)


State 20

    9 if_stmt: IF LPAREN expression • RPAREN block
   12 expression: expression • PLUS expression
   13           | expression • MINUS expression
   14           | expression • TIMES expression
   15           | expression • DIVIDE expression
   16           | expression • EQ expression
   17           | expression • NE expression
   18           | expression • LT expression
   19           | expression • GT expression
   20           | expression • LE expression
   21           | expression • GE expression

    EQ      shift, and go to state 25
    NE      shift, and go to state 26
    LE      shift, and go to state 27
    GE      shift, and go to state 28
    LT      shift, and go to state 29
    GT      shift, and go to state 30
    PLUS    shift, and go to state 31
    MINUS   shift, and go to state 32
    TIMES   shift, and go to state 33
    DIVIDE  shift, and go to state 34
    RPAREN  shift, and go to state 35


State 21

   10 while_stmt: WHILE LPAREN expression • RPAREN block
   12 expression: expression • PLUS expression
   13           | expression • MINUS expression
   14           | expression • TIMES expression
   15           | expression • DIVIDE expression
   16           | expression • EQ expression
   17           | expression • NE expression
   18           | expression • LT expression
   19           | expression • GT expression
   20           | expression • LE expression
   21           | expression • GE expression

    EQ      shift, and go to state 25
    NE      shift, and go to state 26
    LE      shift, and go to state 27
    GE      shift, and go to state 28
    LT      shift, and go to state 29
    GT      shift, and go to state 30
    PLUS    shift, and go to state 31
    MINUS   shift, and go to state 32
    TIMES   shift, and go to state 33
    DIVIDE  shift, and go to state 34
    RPAREN  shift, and go to state 36


State 22

    8 assignment: IDENTIFIER ASSIGN expression • SEMICOLON
   12 expression: expression • PLUS expression
   13           | expression • MINUS expression
   14           | expression • TIMES expression
   15           | expression • DIVIDE expression
   16           | expression • EQ expression
   17           | expression • NE expression
   18           | expression • LT expression
   19           | expression • GT expression
   20           | expression • LE expression
   21           | expression • GE expression

    EQ         shift, and go to state 25
    NE         shift, and go to state 26
    LE         shift, and go to state 27
    GE         shift, and go to state 28
    LT         shift, and go to state 29
    GT         shift, and go to state 30
    PLUS       shift, and go to state 31
    MINUS      shift, and go to state 32
    TIMES      shift, and go to state 33
    DIVIDE     shift, and go to state 34
    SEMICOLON  shift, and go to state 37


State 23

    7 declaration: INT IDENTIFIER ASSIGN expression • SEMICOLON
   12 expression: expression • PLUS expression
   13           | expression • MINUS expression
   14           | expression • TIMES expression
   15           | expression • DIVIDE expression
   16           | expression • EQ expression
   17           | expression • NE expression
   18           | expression • LT expression
   19           | expression • GT expression
   20           | expression • LE expression
   21           | expression • GE expression

    EQ         shift, and go to state 25
    NE         shift, and go to state 26
    LE         shift, and go to state 27
    GE         shift, and go to state 28
    LT         shift, and go to state 29
    GT         shift, and go to state 30
    PLUS       shift, and go to state 31
    MINUS      shift, and go to state 32
    TIMES      shift, and go to state 33
    DIVIDE     shift, and go to state 34
    SEMICOLON  shift, and go to state 38


State 24

   12 expression: expression • PLUS expression
   13           | expression • MINUS expression
   14           | expression • TIMES expression
   15           | expression • DIVIDE expression
   16           | expression • EQ expression
   17           | expression • NE expression
   18           | expression • LT expression
   19           | expression • GT expression
   20           | expression • LE expression
   21           | expression • GE expression
   22           | LPAREN expression • RPAREN

    EQ      shift, and go to state 25
    NE      shift, and go to state 26
    LE      shift, and go to state 27
    GE      shift, and go to state 28
    LT      shift, and go to state 29
    GT      shift, and go to state 30
    PLUS    shift, and go to state 31
    MINUS   shift, and go to state 32
    TIMES   shift, and go to state 33
    DIVIDE  shift, and go to state 34
    RPAREN  shift, and go to state 39


State 25

   16 expression: expression EQ • expression

    LPAREN      shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 19

    expression  go to state 40


State 26

   17 expression: expression NE • expression

    LPAREN      shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 19

    expression  go to state 41


State 27

   20 expression: expression LE • expression

    LPAREN      shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 19

    expression  go to state 42


State 28

   21 expression: expression GE • expression

    LPAREN      shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 19

    expression  go to state 43


State 29

   18 expression: expression LT • expression

    LPAREN      shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 19

    expression  go to state 44


State 30

   19 expression: expression GT • expression

    LPAREN      shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 19

    expression  go to state 45


State 31

   12 expression: expression PLUS • expression

    LPAREN      shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 19

    expression  go to state 46


State 32

   13 expression: expression MINUS • expression

    LPAREN      shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 19

    expression  go to state 47


State 33

   14 expression: expression TIMES • expression

    LPAREN      shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 19

    expression  go to state 48


State 34

   15 expression: expression DIVIDE • expression

    LPAREN      shift, and go to state 17
    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 19

    expression  go to state 49


State 35

    9 if_stmt: IF LPAREN expression RPAREN • block

    LBRACE  shift, and go to state 50

    block  go to state 51


State 36

   10 while_stmt: WHILE LPAREN expression RPAREN • block

    LBRACE  shift, and go to state 50

    block  go to state 52


State 37

    8 assignment: IDENTIFIER ASSIGN expression SEMICOLON •

    $default  reduce using rule 8 (assignment)


State 38

    7 declaration: INT IDENTIFIER ASSIGN expression SEMICOLON •

    $default  reduce using rule 7 (declaration)


State 39

   22 expression: LPAREN expression RPAREN •

    $default  reduce using rule 22 (expression)


State 40

   12 expression: expression • PLUS expression
   13           | expression • MINUS expression
   14           | expression • TIMES expression
   15           | expression • DIVIDE expression
   16           | expression • EQ expression
   16           | expression EQ expression •
   17           | expression • NE expression
   18           | expression • LT expression
   19           | expression • GT expression
   20           | expression • LE expression
   21           | expression • GE expression

    EQ      shift, and go to state 25
    NE      shift, and go to state 26
    LE      shift, and go to state 27
    GE      shift, and go to state 28
    LT      shift, and go to state 29
    GT      shift, and go to state 30
    PLUS    shift, and go to state 31
    MINUS   shift, and go to state 32
    TIMES   shift, and go to state 33
    DIVIDE  shift, and go to state 34

    EQ        [reduce using rule 16 (expression)]
    NE        [reduce using rule 16 (expression)]
    LE        [reduce using rule 16 (expression)]
    GE        [reduce using rule 16 (expression)]
    LT        [reduce using rule 16 (expression)]
    GT        [reduce using rule 16 (expression)]
    PLUS      [reduce using rule 16 (expression)]
    MINUS     [reduce using rule 16 (expression)]
    TIMES     [reduce using rule 16 (expression)]
    DIVIDE    [reduce using rule 16 (expression)]
    $default  reduce using rule 16 (expression)


State 41

   12 expression: expression • PLUS expression
   13           | expression • MINUS expression
   14           | expression • TIMES expression
   15           | expression • DIVIDE expression
   16           | expression • EQ expression
   17           | expression • NE expression
   17           | expression NE expression •
   18           | expression • LT expression
   19           | expression • GT expression
   20           | expression • LE expression
   21           | expression • GE expression

    EQ      shift, and go to state 25
    NE      shift, and go to state 26
    LE      shift, and go to state 27
    GE      shift, and go to state 28
    LT      shift, and go to state 29
    GT      shift, and go to state 30
    PLUS    shift, and go to state 31
    MINUS   shift, and go to state 32
    TIMES   shift, and go to state 33
    DIVIDE  shift, and go to state 34

    EQ        [reduce using rule 17 (expression)]
    NE        [reduce using rule 17 (expression)]
    LE        [reduce using rule 17 (expression)]
    GE        [reduce using rule 17 (expression)]
    LT        [reduce using rule 17 (expression)]
    GT        [reduce using rule 17 (expression)]
    PLUS      [reduce using rule 17 (expression)]
    MINUS     [reduce using rule 17 (expression)]
    TIMES     [reduce using rule 17 (expression)]
    DIVIDE    [reduce using rule 17 (expression)]
    $default  reduce using rule 17 (expression)


State 42

   12 expression: expression • PLUS expression
   13           | expression • MINUS expression
   14           | expression • TIMES expression
   15           | expression • DIVIDE expression
   16           | expression • EQ expression
   17           | expression • NE expression
   18           | expression • LT expression
   19           | expression • GT expression
   20           | expression • LE expression
   20           | expression LE expression •
   21           | expression • GE expression

    EQ      shift, and go to state 25
    NE      shift, and go to state 26
    LE      shift, and go to state 27
    GE      shift, and go to state 28
    LT      shift, and go to state 29
    GT      shift, and go to state 30
    PLUS    shift, and go to state 31
    MINUS   shift, and go to state 32
    TIMES   shift, and go to state 33
    DIVIDE  shift, and go to state 34

    EQ        [reduce using rule 20 (expression)]
    NE        [reduce using rule 20 (expression)]
    LE        [reduce using rule 20 (expression)]
    GE        [reduce using rule 20 (expression)]
    LT        [reduce using rule 20 (expression)]
    GT        [reduce using rule 20 (expression)]
    PLUS      [reduce using rule 20 (expression)]
    MINUS     [reduce using rule 20 (expression)]
    TIMES     [reduce using rule 20 (expression)]
    DIVIDE    [reduce using rule 20 (expression)]
    $default  reduce using rule 20 (expression)


State 43

   12 expression: expression • PLUS expression
   13           | expression • MINUS expression
   14           | expression • TIMES expression
   15           | expression • DIVIDE expression
   16           | expression • EQ expression
   17           | expression • NE expression
   18           | expression • LT expression
   19           | expression • GT expression
   20           | expression • LE expression
   21           | expression • GE expression
   21           | expression GE expression •

    EQ      shift, and go to state 25
    NE      shift, and go to state 26
    LE      shift, and go to state 27
    GE      shift, and go to state 28
    LT      shift, and go to state 29
    GT      shift, and go to state 30
    PLUS    shift, and go to state 31
    MINUS   shift, and go to state 32
    TIMES   shift, and go to state 33
    DIVIDE  shift, and go to state 34

    EQ        [reduce using rule 21 (expression)]
    NE        [reduce using rule 21 (expression)]
    LE        [reduce using rule 21 (expression)]
    GE        [reduce using rule 21 (expression)]
    LT        [reduce using rule 21 (expression)]
    GT        [reduce using rule 21 (expression)]
    PLUS      [reduce using rule 21 (expression)]
    MINUS     [reduce using rule 21 (expression)]
    TIMES     [reduce using rule 21 (expression)]
    DIVIDE    [reduce using rule 21 (expression)]
    $default  reduce using rule 21 (expression)


State 44

   12 expression: expression • PLUS expression
   13           | expression • MINUS expression
   14           | expression • TIMES expression
   15           | expression • DIVIDE expression
   16           | expression • EQ expression
   17           | expression • NE expression
   18           | expression • LT expression
   18           | expression LT expression •
   19           | expression • GT expression
   20           | expression • LE expression
   21           | expression • GE expression

    EQ      shift, and go to state 25
    NE      shift, and go to state 26
    LE      shift, and go to state 27
    GE      shift, and go to state 28
    LT      shift, and go to state 29
    GT      shift, and go to state 30
    PLUS    shift, and go to state 31
    MINUS   shift, and go to state 32
    TIMES   shift, and go to state 33
    DIVIDE  shift, and go to state 34

    EQ        [reduce using rule 18 (expression)]
    NE        [reduce using rule 18 (expression)]
    LE        [reduce using rule 18 (expression)]
    GE        [reduce using rule 18 (expression)]
    LT        [reduce using rule 18 (expression)]
    GT        [reduce using rule 18 (expression)]
    PLUS      [reduce using rule 18 (expression)]
    MINUS     [reduce using rule 18 (expression)]
    TIMES     [reduce using rule 18 (expression)]
    DIVIDE    [reduce using rule 18 (expression)]
    $default  reduce using rule 18 (expression)


State 45

   12 expression: expression • PLUS expression
   13           | expression • MINUS expression
   14           | expression • TIMES expression
   15           | expression • DIVIDE expression
   16           | expression • EQ expression
   17           | expression • NE expression
   18           | expression • LT expression
   19           | expression • GT expression
   19           | expression GT expression •
   20           | expression • LE expression
   21           | expression • GE expression

    EQ      shift, and go to state 25
    NE      shift, and go to state 26
    LE      shift, and go to state 27
    GE      shift, and go to state 28
    LT      shift, and go to state 29
    GT      shift, and go to state 30
    PLUS    shift, and go to state 31
    MINUS   shift, and go to state 32
    TIMES   shift, and go to state 33
    DIVIDE  shift, and go to state 34

    EQ        [reduce using rule 19 (expression)]
    NE        [reduce using rule 19 (expression)]
    LE        [reduce using rule 19 (expression)]
    GE        [reduce using rule 19 (expression)]
    LT        [reduce using rule 19 (expression)]
    GT        [reduce using rule 19 (expression)]
    PLUS      [reduce using rule 19 (expression)]
    MINUS     [reduce using rule 19 (expression)]
    TIMES     [reduce using rule 19 (expression)]
    DIVIDE    [reduce using rule 19 (expression)]
    $default  reduce using rule 19 (expression)


State 46

   12 expression: expression • PLUS expression
   12           | expression PLUS expression •
   13           | expression • MINUS expression
   14           | expression • TIMES expression
   15           | expression • DIVIDE expression
   16           | expression • EQ expression
   17           | expression • NE expression
   18           | expression • LT expression
   19           | expression • GT expression
   20           | expression • LE expression
   21           | expression • GE expression

    EQ      shift, and go to state 25
    NE      shift, and go to state 26
    LE      shift, and go to state 27
    GE      shift, and go to state 28
    LT      shift, and go to state 29
    GT      shift, and go to state 30
    PLUS    shift, and go to state 31
    MINUS   shift, and go to state 32
    TIMES   shift, and go to state 33
    DIVIDE  shift, and go to state 34

    EQ        [reduce using rule 12 (expression)]
    NE        [reduce using rule 12 (expression)]
    LE        [reduce using rule 12 (expression)]
    GE        [reduce using rule 12 (expression)]
    LT        [reduce using rule 12 (expression)]
    GT        [reduce using rule 12 (expression)]
    PLUS      [reduce using rule 12 (expression)]
    MINUS     [reduce using rule 12 (expression)]
    TIMES     [reduce using rule 12 (expression)]
    DIVIDE    [reduce using rule 12 (expression)]
    $default  reduce using rule 12 (expression)


State 47

   12 expression: expression • PLUS expression
   13           | expression • MINUS expression
   13           | expression MINUS expression •
   14           | expression • TIMES expression
   15           | expression • DIVIDE expression
   16           | expression • EQ expression
   17           | expression • NE expression
   18           | expression • LT expression
   19           | expression • GT expression
   20           | expression • LE expression
   21           | expression • GE expression

    EQ      shift, and go to state 25
    NE      shift, and go to state 26
    LE      shift, and go to state 27
    GE      shift, and go to state 28
    LT      shift, and go to state 29
    GT      shift, and go to state 30
    PLUS    shift, and go to state 31
    MINUS   shift, and go to state 32
    TIMES   shift, and go to state 33
    DIVIDE  shift, and go to state 34

    EQ        [reduce using rule 13 (expression)]
    NE        [reduce using rule 13 (expression)]
    LE        [reduce using rule 13 (expression)]
    GE        [reduce using rule 13 (expression)]
    LT        [reduce using rule 13 (expression)]
    GT        [reduce using rule 13 (expression)]
    PLUS      [reduce using rule 13 (expression)]
    MINUS     [reduce using rule 13 (expression)]
    TIMES     [reduce using rule 13 (expression)]
    DIVIDE    [reduce using rule 13 (expression)]
    $default  reduce using rule 13 (expression)


State 48

   12 expression: expression • PLUS expression
   13           | expression • MINUS expression
   14           | expression • TIMES expression
   14           | expression TIMES expression •
   15           | expression • DIVIDE expression
   16           | expression • EQ expression
   17           | expression • NE expression
   18           | expression • LT expression
   19           | expression • GT expression
   20           | expression • LE expression
   21           | expression • GE expression

    EQ      shift, and go to state 25
    NE      shift, and go to state 26
    LE      shift, and go to state 27
    GE      shift, and go to state 28
    LT      shift, and go to state 29
    GT      shift, and go to state 30
    PLUS    shift, and go to state 31
    MINUS   shift, and go to state 32
    TIMES   shift, and go to state 33
    DIVIDE  shift, and go to state 34

    EQ        [reduce using rule 14 (expression)]
    NE        [reduce using rule 14 (expression)]
    LE        [reduce using rule 14 (expression)]
    GE        [reduce using rule 14 (expression)]
    LT        [reduce using rule 14 (expression)]
    GT        [reduce using rule 14 (expression)]
    PLUS      [reduce using rule 14 (expression)]
    MINUS     [reduce using rule 14 (expression)]
    TIMES     [reduce using rule 14 (expression)]
    DIVIDE    [reduce using rule 14 (expression)]
    $default  reduce using rule 14 (expression)


State 49

   12 expression: expression • PLUS expression
   13           | expression • MINUS expression
   14           | expression • TIMES expression
   15           | expression • DIVIDE expression
   15           | expression DIVIDE expression •
   16           | expression • EQ expression
   17           | expression • NE expression
   18           | expression • LT expression
   19           | expression • GT expression
   20           | expression • LE expression
   21           | expression • GE expression

    EQ      shift, and go to state 25
    NE      shift, and go to state 26
    LE      shift, and go to state 27
    GE      shift, and go to state 28
    LT      shift, and go to state 29
    GT      shift, and go to state 30
    PLUS    shift, and go to state 31
    MINUS   shift, and go to state 32
    TIMES   shift, and go to state 33
    DIVIDE  shift, and go to state 34

    EQ        [reduce using rule 15 (expression)]
    NE        [reduce using rule 15 (expression)]
    LE        [reduce using rule 15 (expression)]
    GE        [reduce using rule 15 (expression)]
    LT        [reduce using rule 15 (expression)]
    GT        [reduce using rule 15 (expression)]
    PLUS      [reduce using rule 15 (expression)]
    MINUS     [reduce using rule 15 (expression)]
    TIMES     [reduce using rule 15 (expression)]
    DIVIDE    [reduce using rule 15 (expression)]
    $default  reduce using rule 15 (expression)


State 50

   11 block: LBRACE • program RBRACE

    $default  reduce using rule 2 (program)

    program  go to state 53


State 51

    9 if_stmt: IF LPAREN expression RPAREN block •

    $default  reduce using rule 9 (if_stmt)


State 52

   10 while_stmt: WHILE LPAREN expression RPAREN block •

    $default  reduce using rule 10 (while_stmt)


State 53

    1 program: program • statement
   11 block: LBRACE program • RBRACE

    INT         shift, and go to state 3
    IF          shift, and go to state 4
    WHILE       shift, and go to state 5
    RBRACE      shift, and go to state 54
    IDENTIFIER  shift, and go to state 6

    statement    go to state 7
    declaration  go to state 8
    assignment   go to state 9
    if_stmt      go to state 10
    while_stmt   go to state 11


State 54

   11 block: LBRACE program RBRACE •

    $default  reduce using rule 11 (block)
